edit index -Sign Up href-

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div style="grid: 3/3; align-self: flex-end; padding: 10px;" >
             <button>New</button>
-           <a href="./Sign-Up-Form/index.html"> <button>Sign-Up</button></a> 
+           <a href="Sign-Up.html"> <button>Sign-Up</button></a> 
             <button>Share</button>
         </div>
     </div>
