--- a/Sign-Up.html
+++ b/Sign-Up.html
@@ -14,7 +14,7 @@
         
         <!-- <img src="img/arctic15.jpg" alt="photo"> -->
 
-        <div class="form" style="float: right;">
+        <div class="form" >
             <p id="p1">This is not a real online service! You know you need somthing like this in your 
                 life to help you realize your deepest dreams. 
             Sign up <em>now</em> to get started. </p>
